[package]
name = "nuki-backend-gles"
version = "0.1.4"
authors = ["Varphone Wong <varphone@qq.com>"]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "An OpenGL ES drawing backend for the Rust bindings for the Nuklear 2D immediate GUI library"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/varphone/nuki-backend-gles.git"
homepage = "https://github.com/varphone/nuki-backend-gles"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gls = "0.1"
nuki = "0.2"

[target.'cfg(unix)'.dev-dependencies]
egls = "0.1"
